--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
     "@nuxt/icon": "2.1.1",
     "@nuxtjs/i18n": "10.2.1",
     "@pinia/nuxt": "0.11.3",
+    "@primeuix/themes": "2.0.2",
     "@tailwindcss/vite": "4.1.18",
     "@types/openseadragon": "5.0.1",
+    "graphql-request": "7.4.0",
     "nuxt": "^4.2.2",
     "openseadragon": "5.0.1",
     "pinia": "3.0.4",
+    "primevue": "4.5.4",
     "tailwindcss": "4.1.18",
     "vue": "^3.5.25",
     "vue-router": "^4.6.4"
+  },
+  "devDependencies": {
+    "@primevue/nuxt-module": "4.5.4"
   }
 }
