--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   tarkovpedia:
     build:
       context: ..
-      dockerfile: dockerfile.web
+      dockerfile: Dockerfile.web
     container_name: tarkovpedia
     restart: unless-stopped
     ports:
