--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -2,8 +2,8 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
+COPY package.json package-lock.json ./
+RUN npm ci
 
 COPY . .
 RUN npm run build
@@ -12,14 +12,12 @@ RUN npm run build
 FROM node:20-alpine AS runner
 
 WORKDIR /app
-
 ENV NODE_ENV=production
 
 COPY --from=builder /app/.output ./.output
-COPY --from=builder /app/package*.json ./
+COPY --from=builder /app/package.json ./
 
 RUN npm install --omit=dev
 
 EXPOSE 3000
-
 CMD ["node", ".output/server/index.mjs"]
