--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,10 +1,8 @@
-version: "3.9"
-
 services:
   tarkovpedia:
     build:
       context: ..
-      dockerfile: Dockerfile.web
+      dockerfile: docker/Dockerfile.web
     container_name: tarkovpedia
     restart: unless-stopped
     ports:
