--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openseadragon": "5.0.1",
     "pinia": "3.0.4",
     "primevue": "4.5.4",
+    "swapy": "1.0.5",
     "tailwindcss": "4.1.18",
     "vue": "3.5.25",
     "vue-router": "4.6.4"
